force-app/main/default/objects/BLN_RecalibrationJobCard__c/BLN_RecalibrationJobCard__c.object-meta.xml
<CustomObject>
    <description>FOUK-3892</description>
    <label>Recalibration Job Card</label>
    <nameField>
        <displayFormat>RJC-{00000}</displayFormat>
        <label>Recalibration Job Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recalibration Job Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>