force-app/main/default/objects/BLN_RecalibrationJobCard__c/fields/BLN_Product__c.field-meta.xml
<CustomField>
    <fullName>BLN_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-3892</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Recalibration Job Cards</relationshipLabel>
    <relationshipName>BLN_RecalibrationJobCards</relationshipName>
    <type>Lookup</type>
</CustomField>