force-app/main/default/objects/BLN_RecalibrationJobCard__c/fields/BLN_SortOrder__c.field-meta.xml
<CustomField>
    <fullName>BLN_SortOrder__c</fullName>
    <description>FOUK-3892</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>