force-app/main/default/objects/BLN_RecalibrationJobCard__c/fields/BLN_TaskName__c.field-meta.xml
<CustomField>
    <fullName>BLN_TaskName__c</fullName>
    <description>FOUK-3892</description>
    <label>Task Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>