force-app/main/default/objects/BLN_RecalibrationJobCard__c/fields/BLN_TaskType__c.field-meta.xml
<CustomField>
    <fullName>BLN_TaskType__c</fullName>
    <description>FOUK-9459 - Field to contain task type which is sent to bosch for creating job cards</description>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AWNTXOD000</fullName>
            </value>
            <value>
                <fullName>BOSCHAS002</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>