force-app/main/default/objects/BLN_RecalibrationJobCard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BLN_Product__c</columns>
    <columns>BLN_SortOrder__c</columns>
    <columns>BLN_TaskName__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>